--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server.js",
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch":"nodemon --exec 'npm test'"
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "engines": {
-    "node":"6.10.2"
+    "node": "6.10.2"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.15.2",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.25",
     "mongoose": "^4.5.9"
   },
